--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <section id="vehicle" class="section">
         <div class="vehicle-box">
             <div class="vehicle-img">
-                <img src="C:\Users\SYED AKIB\Desktop\SA tours and travel\images\image.png" alt="Car Interior">
+                <img src="\images\image.png" alt="Car Interior">
             </div>
             <div class="vehicle-info">
                 <h2>Our Premium Vehicle</h2>
@@ -275,10 +275,10 @@
     </footer>
 
     <div class="mobile-bar">
-        <a href="tel:+919999999999" class="bar-btn bar-call">
+        <a href="tel:+919148635263" class="bar-btn bar-call">
             <i class="fas fa-phone-alt"></i> Call Now
         </a>
-        <a href="https://wa.me/919999999999?text=Hi, I want to book a taxi." class="bar-btn bar-wa">
+        <a href="https://wa.me/919148635263?text=Hi, I want to book a taxi." class="bar-btn bar-wa">
             <i class="fab fa-whatsapp"></i> WhatsApp
         </a>
     </div>
@@ -313,3 +313,4 @@
 </body>
 
 </html>
+
