--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </form>
 
             <div class="contact-info">
-                <p><i class="fas fa-map-marker-alt" style="color:var(--accent)"></i> <strong>Based in:</strong> [Your City Name]</p>
+                <p><i class="fas fa-map-marker-alt" style="color:var(--accent)"></i> <strong>Based in:</strong> Srinivasapura , KolarR</p>
                 <p><i class="fas fa-clock" style="color:var(--accent)"></i> <strong>Hours:</strong> 24/7 Available</p>
             </div>
         </div>
@@ -313,6 +313,7 @@
 </body>
 
 </html>
+
 
 
 
